<resources>
    <string name="app_name">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo_filme">Nome do Filme</string>
    <string name="title_activity_nav_manager">NavManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_Cinema">Cinema onde o filme foi visualizado</string>
    <string name="avaliacao_filme">Avaliação numa escala de 1 a 10</string>
    <string name="data_vista_filme">Data em que o filme foi visto</string>
    <string name="select_date">data</string>
    <string name="foto_filme">Fotografias sobre o filme (Opcional)</string>
    <string name="select_foto">Camera</string>
    <string name="obs">Observações (Opcional)</string>
    <string name="submit">Submit</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!-- Drawer -->
    <string name="registo_filme">Registar Filme</string>
    <string name="list_filmes">Lista de Filmes</string>
    <string name="mapa">Mapa</string>
    <string name="dashboard">Dashboard</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="link_imdb" translatable="false">IMDb</string>
    <string name="detalhe">Detalhe</string>


    <!-- Detalhes -->
    <string name="info_nome_filme">Nome do Filme</string>
    <string name="info_genero">Género:</string>
    <string name="info_data_lancamento">Data de Lançamento:</string>
    <string name="info_avalicacao_imdb">Avaliação do IMDB:</string>
    <string name="info_detalhes">Detalhes de visualização</string>
    <string name="info_cinema">Cinema:</string>
    <string name="info_avaliacao">Avaliação:</string>
    <string name="info_data">Data de visualização:</string>
    <string name="info_foto">Fotografias:</string>
    <string name="info_obs">Observações:</string>


    <string name="top">Top 5 - Melhores Filmes</string>
    <string name="voice">Diga o filme que quer pesquisar:</string>
    <string name="num_filmes_visualizados">Numero de Filmes Visualizados</string>

    <!-- Aviso -->
    <string name="erroOBG">Campo obrigatório!</string>
    <string name="erroObgData">O campo data é obrigatório!</string>

    <string name="erroDataInf">A data tem de ser inferior à data atual</string>

    <string name="erroFilmeAv">Erro: Este filme já foi avaliado!</string>
    <string name="erroFilmeNaoExiste">Este filme não existe</string>

    <string name="erroCinemaNaoExiste">Este Cinema não existe</string>

    <string name="confirRegisto">Confirmar Registo</string>

    <string name="prentendeRegistar">Pretende registar o filme</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>

    <string name="filmeAvalidadoSucesso">Filme avaliado com sucesso</string>

    <string name="semInternet">Não tem ligação à internet</string>


    <string name="avaliacaoFilmeMuitoFraco">Muito Fraco</string>
    <string name="avaliacaoFilmeFraco">Fraco</string>
    <string name="avaliacaoFilmeMedio">Médio</string>
    <string name="avaliacaoFilmeBom">Bom</string>
    <string name="avaliacaoFilmeExcelente">Excelente</string>

    //voz
    <string name="pesquisaVoz">Pesquisa por voz</string>
    <string name="desejaProcurarFilme">"Deseja procurar o filme "</string>
    <string name="falar">Falar</string>
    <string name="naoAvaliado">Este filme ainda não foi avaliado</string>
    <string name="botaoFalar">Clique no botão Falar</string>
    <string name="proximidade">Proximidade</string>
    <string name="ordenacao">Ordenação</string>
    <string name="distancia_500_metros">500 metros</string>
    <string name="distancia_1000_metros">1000 metros</string>
    <string name="crescente">crescente</string>
    <string name="decrescente">decrescente</string>


</resources>